# nezu-works-bot

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  .windsurfrules  LICENSE  Makefile  README-en.md  README.md  ignored_ids.txt  index.html  main.py  pyproject.toml  requirements.txt
.githooks/: .pre-commit-config.yaml  pre-push
.github/workflows/: linter.yml  step1_main.yml  step2_failure.yml  step2_success.yml
archives/: s.py
config/: config.py
core/: bot_info.py  logger.py  utils.py
core/constants/: __init__.py  commands.py
core/handlers/: __init__.py  command_handler.py  message_handler.py
flex_messages/: help.json  sample.json
scripts/: auto_update.py  notify_failure.py  update_readme.py  update_sdk.py
src/: nezu_works_bot.py
src/nezu_works_bot/: __init__.py
templates/: README-en.template.md  README.template.md
tests/: test_init.py
