[project]
name = "nezu-works-bot"
version = "1.0.0"
description = "line-works-sdkを使用した便利な多機能BOT"
authors = [{ name = "ねずみにうむ", email = "nezumi.dev.0627@gmail.com" }]
dependencies = [
    "line-works-sdk>=3.4",
    "ruff>=0.9.10",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["numpy>=2.2.3", "pytest>=8.3.5", "pytest-cov>=6.0.0"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nezu_works_bot"]

[tool.mypy]
# your existing mypy configuration

[tool.ruff]
# your existing ruff configuration

[tool.rye.scripts]
lint = { chain = ["lint:ruff", "lint:ruff_format", "lint:mypy"] }
"lint:ruff" = "ruff check ./ --diff"
"lint:ruff_format" = "ruff format --check --diff"
"lint:mypy" = "mypy ./ --explicit-package-bases"

format = { chain = ["format:ruff", "format:ruff_check"] }
"format:ruff" = "ruff format ./"
"format:ruff_check" = "ruff check ./ --fix"

test = { cmd = "pytest -v ./tests --cov=./src --cov-report term-missing --durations=5" }

# GitHub commit style lint test
lint_github = { chain = ["lint_github:ruff", "lint:ruff_format", "lint:mypy"] }
"lint_github:ruff" = "ruff check ./ --diff --output-format=github"
